# NoctiV4Avanzado

./: .env.example  .gitattributes  .gitignore  MERGE_PLAN.md  README.md  docker-compose.yml
apps/brain/: .dockerignore  .env.example  .gitignore  DOCUMENTATION.md  Dockerfile  OPERATIONS.md  README.md  ROADMAP.md  STRATEGY.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  señales.md
apps/brain/alembic/: env.py
apps/brain/alembic/versions/: 1a2b3c4d5e6f_p0_exits_outcomes_equity_ohlc.py  2b3c4d5e6f7a_signal_id_nullable.py  (+9 more)
apps/brain/dashboard/: app.py
apps/brain/docker/: entrypoint.sh
apps/brain/docs/: AUDIT_2026-06.md  DEPLOY.md  GG_PMM_EVOLUTION.md  RESTRUCTURE_PLAN.md  V2_PROGRESS.md
apps/brain/infra/: check_tables.py  smoke.py
apps/brain/scripts/: health_check.py  reset_paper_state.py  run_api.py  run_backtest.py  run_regime_research.py  shadow_report.py  start-api.ps1  start-dashboard.ps1  watchdog.ps1
apps/brain/tests/: conftest.py  test_backtest_engine.py  test_backtest_metrics.py  test_book_cache_and_merge.py  test_bus_contract.py  test_bus_db.py  test_bus_intents.py  test_drawdown.py  test_edge_performance.py  test_edge_weights.py  test_exits_and_close.py  test_gamma_client.py  test_health.py  test_learning.py  test_orchestrator_e2e.py  test_orchestrator_paper.py  test_outcome_resolver.py  test_overreaction.py  test_paper_execution.py  test_probability.py  test_regime.py  test_risk_engine.py  test_shadow_divergence.py  test_signal_audit.py  test_sizer.py  test_walk_forward.py
(+155 files in other folders)
