[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "umbra"
version = "0.1.0"
description = "umbraNocti — Polymarket overreaction edge bot"
requires-python = ">=3.11,<3.12"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: requiere Postgres + Redis vivos",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]
ignore = [
    "E501",  # la longitud de línea no bloquea
    "B008",  # Depends()/Query()/Header() como default es el idiom de FastAPI
]

[tool.mypy]
python_version = "3.11"
files = ["src"]
ignore_missing_imports = true
no_implicit_optional = true
